# pseudo_dojo

./: .gitignore  .travis.yml  INSTALL  LICENSE  PROJECT.rst  README.md  README.rst  requirements-optional.txt  requirements.txt  setup.cfg  setup.py  tasks.py  tox.ini
.github/: pseudodojo-lint.yml
dev_scripts/: conda_install.sh  extract_den.py  runtests.sh  travis_manager.yml
docs/: Makefile  about.html  conf.py  contribute.html  fac.html  index.rst  make.bat
pseudo_dojo/: __init__.py  sample.json  test_ecutresults.py
pseudo_dojo/NewDojo/: dojo.py
pseudo_dojo/core/: __init__.py  atom.py  constants.py  deltaworks.py  dojo.py  dojoreport.py  ncparams.py  pseudos.py  release.py  testing.py
pseudo_dojo/data/: H-wdr.djrepo  H-wdr.psp8  Si.psp8  (+7 more)
website/: abinintsitepage.html  about.html  contribute.html  direct_table_test.html  dojo-tools.js  fac.html  faq.html  index.html  make_papers_page.py  nc-fr-04_pbe_standard.json  nc-fr-04_pbe_stringent.json  nc-fr-04_pbesol_standard.json  nc-fr-04_pbesol_stringent.json  nc-sr-04-3plus_pbe_standard.json  nc-sr-04_3+_pbe_standard.json  nc-sr-04_pbe_standard.json  nc-sr-04_pbe_stringent.json  nc-sr-04_pbesol_standard.json  nc-sr-04_pbesol_stringent.json  nc-sr-04_pw_standard.json  nc-sr-04_pw_stringent.json  nc-sr_pbe_standard.json  nc-sr_pbe_stringent.json  nc-sr_pbesol_standard.json  nc-sr_pbesol_stringent.json  nc-sr_pw_standard.json  nc-sr_pw_stringent.json  paperlist.html  papers.html  papers_using_pseudodojo.txt  paw_pbe_standard.json  paw_pbe_stringent.json  paw_pw_standard.json  paw_pw_stringent.json  pseudo-dojo.bib
(+7924 files in other folders)
